--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.utils.widget.ImageFilterView
+            android:id="@+id/icon"
+            android:layout_width="150dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
+            android:src="@mipmap/ic_tvmaze"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:roundPercent="0.1" />
+
+        <TextView
+            android:id="@+id/app_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/main_activity_description"
+            android:textSize="16sp"
+            app:layout_constraintLeft_toLeftOf="@id/icon"
+            app:layout_constraintRight_toRightOf="@id/icon"
+            app:layout_constraintTop_toBottomOf="@id/icon" />
+
+
+        <EditText
+            android:id="@+id/title_edtxt"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:hint="Enter title"
+            android:inputType="textCapSentences"
+            android:maxLines="1"
+            app:layout_constraintLeft_toLeftOf="@id/app_title"
+            app:layout_constraintRight_toRightOf="@id/app_title"
+            app:layout_constraintTop_toBottomOf="@id/app_title" />
+
+        <ImageView
+            android:id="@+id/imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="300dp"
+            android:layout_marginTop="64dp"
+            android:adjustViewBounds="true"
+            android:background="@color/colorAccent"
+            android:contentDescription="@null"
+            android:scaleType="fitCenter"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/title_edtxt" />
+
+
+        <TextView
+            android:id="@+id/title_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:textSize="22sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imageview" />
+
+        <TextView
+            android:id="@+id/premiered_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            app:layout_constraintLeft_toLeftOf="@id/title_txt"
+            app:layout_constraintRight_toRightOf="@id/title_txt"
+            app:layout_constraintTop_toBottomOf="@id/title_txt" />
+
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@id/imageview"
+            app:layout_constraintLeft_toLeftOf="@id/imageview"
+            app:layout_constraintRight_toRightOf="@id/imageview"
+            app:layout_constraintTop_toTopOf="@id/imageview" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
